--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    button.mat-primary {
+        background-color: #3a5bb7 !important;
+    }
+    .title {
+        margin: 5px auto 20px auto;
+        padding: 10px 0 10px 0;
+        text-align: center;
+        border-bottom: 1px solid;
+        border-right: 1px solid;
+        border-left: 1px solid;
+        border-radius: 20px;
+        background-color: rgb(66, 103, 182);
+        color: white;
+        max-width: 80%;
+    }
+}
